--- a/site_nav/academy/index.html
+++ b/site_nav/academy/index.html
@@ -110,27 +110,43 @@
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">A training and certifications initiative, by Harmonious Platform Systems.</div></font><br>
 <br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Harmonious Platform Systems Academy Board</strong><br>
+<br>
+	<ul>
+		<li>(InPr) Chris McGimpsey-Jones</li>
+	</ul></div></font>
+<br>
 	<font color="gold"><div align="left" style="font-size:50%"><strong>Certifications</strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 1 (HPSA1NA) - NETWORK ADMINISTRATION</strong></font><br>
-<br>
-	<font color="gold">&nbsp Level 1 certifies a proven ability in Network Administration of an operational computer network, 
-	functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
+
+	<font color="gold">&nbsp Level 1 certifies a proven ability in Network Administration of an operational computer network, functioning as part of 
+	the Harmonious Platform Systems infrastructure.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 2 (HPSA2EN) - ENGINEER</strong></font><br>
-<br>
+
 	<font color="gold">&nbsp Level 2 certifies a proven ability as an Engineer to resolve issues without impacting data or security integrity of an 
 	operational computer network, functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 3 (HPSA3AR) - ARCHITECT</strong></font><br>
-<br>
+
 	<font color="gold">&nbsp Level 3 certifies a proven ability as an Architect to develop and implement new strategies and technologies for computer 
 	networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 4 (HPSA4MA) - MASTER</strong></font><br>
-<br>
+
 	<font color="gold">&nbsp Level 4 certifies a proven ability as a Master to manage computer systems and servers with unrestricted administrative 
-	access and to make exceptional decisions for computer networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font>
+	access and to make exceptional decisions for computer networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
+
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 5 (HPSA5IN) - INSTRUCTOR (In)</strong></font><br>
+
+	<font color="gold">&nbsp Level 5 certifies a proven ability as an Instructor in Levels 1-4 to instruct and mentor students participating in 
+	academic activities, formed as part of the Harmonious Platform Systems Academy.</div></font><br>
+
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 6 (HPSA6PR) - PROFESSIONAL (Pr)</strong></font><br>
+
+	<font color="gold">&nbsp Level 6 certifies a proven ability as a Professional in Levels 1-5 to qualify for entry to the Board and be formally 
+	recognized as a Harmonious Platform Systems Academy Board Member.</div>
 <br>
 	<button class="button button"><b><a href="" style="color:black; text-decoration:none">Apply</a></b></button>
 	<font color="gold"><div align="left" style="font-size:45%"><em>Not currently accepting applications.</em></div></font>
