--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems -->
-		<!-- Portal entry Version 1.0_beta -->
+		<!-- Portal entry Version 1.2 -->
 
 <head>
 	<title>Freedom Publishers Union, a GC Media Publishing Management website</title>
@@ -15,7 +15,7 @@
 {
   font-family: "Source Code Pro", sans-serif; background-color: black;
 
-  background-image: url('https://res.cloudinary.com/dgihigbo4/image/upload/v1708265198/freedompublishersunion/cover_ztr8ms.webp');
+  background-image: url('https://res.cloudinary.com/dgihigbo4/image/upload/q_100/v1728279025/cover_dark_seucew.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
