--- a/site_nav/technology.html
+++ b/site_nav/technology.html
@@ -5,14 +5,14 @@
 
 <head>
 		<!-- Page redirection -->
-		<meta http-equiv="refresh" content="1; url=main.html" />
+		<meta http-equiv="refresh" content="0.5; url=../technology-index.html" />
 
 <title>Harmonious Platform Systems - Technology</title>
 
 <style>
   body
 {
-  font-family: "courier", sans-serif; background-color: black;
+  font-family: monospace; background-color: black;
 }
 
 .main {
@@ -25,7 +25,7 @@
 
 <div class="main">
 	<br>
-	<font color="gold"><div style="font-size:50%">Page redirecting... </div></font><br>
+	<font color="white"><div style="font-size:50%">Page redirecting... </div></font><br>
 </div> 
 
 </body>
